tests/neg-custom-args/captures/delayedRunops.check
-- Error: tests/neg-custom-args/captures/delayedRunops.scala:15:13 -----------------------------------------------------
15 |      runOps(ops1)  // error
   |             ^^^^
   |             reference ops* is not included in the allowed capture set {}
   |             of an enclosing function literal with expected type () -> Unit
-- Error: tests/neg-custom-args/captures/delayedRunops.scala:21:13 -----------------------------------------------------
21 |      runOps(ops1)  // error
   |             ^^^^
   |             reference (caps.cap : caps.Capability) is not included in the allowed capture set {}
   |             of an enclosing function literal with expected type () -> Unit
-- Error: tests/neg-custom-args/captures/delayedRunops.scala:27:13 -----------------------------------------------------
27 |      runOps(ops1)  // error
   |             ^^^^
   |             reference ops* is not included in the allowed capture set {}
   |             of an enclosing function literal with expected type () -> Unit
